--- a/DepremIstanbul/index.html
+++ b/DepremIstanbul/index.html
@@ -35,6 +35,18 @@
                     <option value="enkazAltinda">Enkaz Altındayım</option>
                     <option value="kotuDurumda">Kötü Durumdayım</option>
                     <option value="haberAlamiyorum">Ailemden Haber Alamıyorum</option>
+                    <option value="haberAlamiyorum">Kendim çıktım ama ailem enkazda kaldı</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="status">Depreme Nerede Yakalandınız: (Ekiplerin size en kısa sürede ulaşması için çok önemlidir.)</label>
+                <select id="status" name="status">
+                    <option value="iyiyim">Kendi Odam</option>
+                    <option value="enkazAltinda">Banyo veya Tuvalette</option>
+                    <option value="kotuDurumda">Mutfakta</option>
+                    <option value="haberAlamiyorum">Oturma Odasında</option>
+                    <option value="haberAlamiyorum">Merdiven Boşluğunda</option>
+                    <option value="haberAlamiyorum">Asansör</option>
                 </select>
             </div>
             <div class="form-group">
